# sonata-ai-bulk-surveillance

./: README.md  generate.py  index.html  index.template.html  pyproject.toml
data/: hidden_variables.json  prompt.md  prompt_decision_simple.md  prompt_decision_struct.md  rulebook.md
docs/: index.html
outputs/: generated_posts.json  metadata.json  pair_0001_a.txt  pair_0001_b.txt  pair_0002_a.txt  pair_0002_b.txt  pair_0003_a.txt  pair_0003_b.txt  pair_0004_a.txt  pair_0004_b.txt  pair_0005_a.txt  pair_0005_b.txt  pair_0006_a.txt  pair_0006_b.txt  pair_0007_a.txt  pair_0007_b.txt  pair_0008_a.txt  pair_0008_b.txt  pair_0009_a.txt  pair_0009_b.txt  pair_0010_a.txt  pair_0010_b.txt
src/: build.py  evaluate.py  generate.py  openrouter_api.py
